// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`floatingEffect.ts > floatingEffect.ts > codefixed at 4:0 1`] = `"// no-fixes"`;

exports[`floatingEffect.ts > floatingEffect.ts > codefixed at 6:0 1`] = `"// no-fixes"`;

exports[`floatingEffect.ts > floatingEffect.ts > codefixed at 10:4 1`] = `"// no-fixes"`;

exports[`floatingEffect.ts > floatingEffect.ts 1`] = `
"Effect.succeed("floating")
5:0 - 5:26 | Effect must be yielded or assigned to a variable.

Effect.never
7:0 - 7:12 | Effect must be yielded or assigned to a variable.

Effect.never
11:4 - 11:16 | Effect must be yielded or assigned to a variable."
`;

exports[`missingEffectContext_callExpression.ts > missingEffectContext_callExpression.ts > codefixed at 21:7 1`] = `"// no-fixes"`;

exports[`missingEffectContext_callExpression.ts > missingEffectContext_callExpression.ts > codefixed at 28:20 1`] = `"// no-fixes"`;

exports[`missingEffectContext_callExpression.ts > missingEffectContext_callExpression.ts 1`] = `
"effectWithServices
22:7 - 22:25 | Missing 'ServiceA | ServiceB | ServiceC' in the expected Effect context.

effectWithServices
29:20 - 29:38 | Missing 'ServiceC' in the expected Effect context."
`;

exports[`missingEffectContext_lazy.ts > missingEffectContext_lazy.ts > codefixed at 19:2 1`] = `"// no-fixes"`;

exports[`missingEffectContext_lazy.ts > missingEffectContext_lazy.ts 1`] = `
"return Effect.onExit(evaluate(), () => Effect.void)
20:2 - 20:53 | Missing 'ServiceA' in the expected Effect context."
`;

exports[`missingEffectContext_plainAssignment.ts > missingEffectContext_plainAssignment.ts > codefixed at 20:13 1`] = `"// no-fixes"`;

exports[`missingEffectContext_plainAssignment.ts > missingEffectContext_plainAssignment.ts > codefixed at 23:13 1`] = `"// no-fixes"`;

exports[`missingEffectContext_plainAssignment.ts > missingEffectContext_plainAssignment.ts > codefixed at 28:13 1`] = `"// no-fixes"`;

exports[`missingEffectContext_plainAssignment.ts > missingEffectContext_plainAssignment.ts > codefixed at 32:10 1`] = `"// no-fixes"`;

exports[`missingEffectContext_plainAssignment.ts > missingEffectContext_plainAssignment.ts > codefixed at 37:10 1`] = `"// no-fixes"`;

exports[`missingEffectContext_plainAssignment.ts > missingEffectContext_plainAssignment.ts 1`] = `
"missingAllServices
21:13 - 21:31 | Missing 'ServiceA | ServiceB | ServiceC' in the expected Effect context.

missingServiceC
24:13 - 24:28 | Missing 'ServiceC' in the expected Effect context.

missingServiceCWithSubtyping
29:13 - 29:41 | Missing 'ServiceC' in the expected Effect context.

missingServiceA
33:10 - 33:25 | Missing 'A' in the expected Effect context.

effectWithServices
38:10 - 38:28 | Missing 'ServiceA | ServiceB | ServiceC' in the expected Effect context."
`;

exports[`missingEffectContext_returnSignature.ts > missingEffectContext_returnSignature.ts > codefixed at 18:4 1`] = `"// no-fixes"`;

exports[`missingEffectContext_returnSignature.ts > missingEffectContext_returnSignature.ts > codefixed at 22:62 1`] = `"// no-fixes"`;

exports[`missingEffectContext_returnSignature.ts > missingEffectContext_returnSignature.ts > codefixed at 25:105 1`] = `"// no-fixes"`;

exports[`missingEffectContext_returnSignature.ts > missingEffectContext_returnSignature.ts 1`] = `
"return effectWithServices
19:4 - 19:29 | Missing 'ServiceA | ServiceB | ServiceC' in the expected Effect context.

effectWithServices
23:62 - 23:80 | Missing 'ServiceA | ServiceB | ServiceC' in the expected Effect context.

effectWithServices
26:105 - 26:123 | Missing 'ServiceC' in the expected Effect context."
`;

exports[`missingEffectError_callExpression.ts > missingEffectError_callExpression.ts > codefixed at 22:7 1`] = `"// no-fixes"`;

exports[`missingEffectError_callExpression.ts > missingEffectError_callExpression.ts > codefixed at 29:20 1`] = `"// no-fixes"`;

exports[`missingEffectError_callExpression.ts > missingEffectError_callExpression.ts 1`] = `
"effectWithErrors
23:7 - 23:23 | Missing 'ErrorA | ErrorB | ErrorC' in the expected Effect errors.

effectWithErrors
30:20 - 30:36 | Missing 'ErrorC' in the expected Effect errors."
`;

exports[`missingEffectError_plainAssignment.ts > missingEffectError_plainAssignment.ts > codefixed at 20:13 1`] = `"// no-fixes"`;

exports[`missingEffectError_plainAssignment.ts > missingEffectError_plainAssignment.ts > codefixed at 23:13 1`] = `"// no-fixes"`;

exports[`missingEffectError_plainAssignment.ts > missingEffectError_plainAssignment.ts > codefixed at 28:13 1`] = `"// no-fixes"`;

exports[`missingEffectError_plainAssignment.ts > missingEffectError_plainAssignment.ts > codefixed at 32:10 1`] = `"// no-fixes"`;

exports[`missingEffectError_plainAssignment.ts > missingEffectError_plainAssignment.ts > codefixed at 37:10 1`] = `"// no-fixes"`;

exports[`missingEffectError_plainAssignment.ts > missingEffectError_plainAssignment.ts 1`] = `
"missingAllErrors
21:13 - 21:29 | Missing 'ErrorA | ErrorB | ErrorC' in the expected Effect errors.

missingErrorC
24:13 - 24:26 | Missing 'ErrorC' in the expected Effect errors.

missingErrorCWithSubtyping
29:13 - 29:39 | Missing 'ErrorC' in the expected Effect errors.

missingErrorA
33:10 - 33:23 | Missing 'A' in the expected Effect errors.

effectWithErrors
38:10 - 38:26 | Missing 'ErrorA | ErrorB | ErrorC' in the expected Effect errors."
`;

exports[`missingEffectError_returnSignature.ts > missingEffectError_returnSignature.ts > codefixed at 19:4 1`] = `"// no-fixes"`;

exports[`missingEffectError_returnSignature.ts > missingEffectError_returnSignature.ts > codefixed at 23:62 1`] = `"// no-fixes"`;

exports[`missingEffectError_returnSignature.ts > missingEffectError_returnSignature.ts > codefixed at 26:94 1`] = `"// no-fixes"`;

exports[`missingEffectError_returnSignature.ts > missingEffectError_returnSignature.ts 1`] = `
"return effectWithErrors
20:4 - 20:27 | Missing 'ErrorA | ErrorB | ErrorC' in the expected Effect errors.

effectWithErrors
24:62 - 24:78 | Missing 'ErrorA | ErrorB | ErrorC' in the expected Effect errors.

effectWithErrors
27:94 - 27:110 | Missing 'ErrorC' in the expected Effect errors."
`;

exports[`missingStarInYieldEffectGen.ts > missingStarInYieldEffectGen.ts > codefixed at 7:38 1`] = `"// no-fixes"`;

exports[`missingStarInYieldEffectGen.ts > missingStarInYieldEffectGen.ts > codefixed at 8:4 1`] = `
"import * as Effect from "effect/Effect"

const noError = Effect.gen(function*(){
    yield* Effect.succeed(1)
})

// @ts-expect-error
const missingStarInYield = Effect.gen(function*(){
    yield* Effect.succeed(1)
})

// @ts-expect-error
const missingStarInMultipleYield = Effect.gen(function*(){
    yield Effect.succeed(1)
    yield Effect.succeed(2)
})

const missingStarInInnerYield = Effect.gen(function*(){
    // @ts-expect-error
    yield* Effect.gen(function*(){
        yield Effect.succeed(1)
    })
})

export function* effectInsideStandardGenerator(){
    yield Effect.never
    // ^- this is fine, not inside an effect gen
}

// @ts-expect-error
const effectFnUsage = Effect.fn(function*(){
    yield Effect.never
})

// @ts-expect-error
const tracedEffectFnUsage = Effect.fn("tracedEffectFnUsage")(function*(){
    yield Effect.never
})

// @ts-expect-error
const untracedEffectFnUsage = Effect.fnUntraced(function*(){
    yield Effect.never
})
"
`;

exports[`missingStarInYieldEffectGen.ts > missingStarInYieldEffectGen.ts > codefixed at 12:46 1`] = `"// no-fixes"`;

exports[`missingStarInYieldEffectGen.ts > missingStarInYieldEffectGen.ts > codefixed at 13:4 1`] = `
"import * as Effect from "effect/Effect"

const noError = Effect.gen(function*(){
    yield* Effect.succeed(1)
})

// @ts-expect-error
const missingStarInYield = Effect.gen(function*(){
    yield Effect.succeed(1)
})

// @ts-expect-error
const missingStarInMultipleYield = Effect.gen(function*(){
    yield* Effect.succeed(1)
    yield Effect.succeed(2)
})

const missingStarInInnerYield = Effect.gen(function*(){
    // @ts-expect-error
    yield* Effect.gen(function*(){
        yield Effect.succeed(1)
    })
})

export function* effectInsideStandardGenerator(){
    yield Effect.never
    // ^- this is fine, not inside an effect gen
}

// @ts-expect-error
const effectFnUsage = Effect.fn(function*(){
    yield Effect.never
})

// @ts-expect-error
const tracedEffectFnUsage = Effect.fn("tracedEffectFnUsage")(function*(){
    yield Effect.never
})

// @ts-expect-error
const untracedEffectFnUsage = Effect.fnUntraced(function*(){
    yield Effect.never
})
"
`;

exports[`missingStarInYieldEffectGen.ts > missingStarInYieldEffectGen.ts > codefixed at 14:4 1`] = `
"import * as Effect from "effect/Effect"

const noError = Effect.gen(function*(){
    yield* Effect.succeed(1)
})

// @ts-expect-error
const missingStarInYield = Effect.gen(function*(){
    yield Effect.succeed(1)
})

// @ts-expect-error
const missingStarInMultipleYield = Effect.gen(function*(){
    yield Effect.succeed(1)
    yield* Effect.succeed(2)
})

const missingStarInInnerYield = Effect.gen(function*(){
    // @ts-expect-error
    yield* Effect.gen(function*(){
        yield Effect.succeed(1)
    })
})

export function* effectInsideStandardGenerator(){
    yield Effect.never
    // ^- this is fine, not inside an effect gen
}

// @ts-expect-error
const effectFnUsage = Effect.fn(function*(){
    yield Effect.never
})

// @ts-expect-error
const tracedEffectFnUsage = Effect.fn("tracedEffectFnUsage")(function*(){
    yield Effect.never
})

// @ts-expect-error
const untracedEffectFnUsage = Effect.fnUntraced(function*(){
    yield Effect.never
})
"
`;

exports[`missingStarInYieldEffectGen.ts > missingStarInYieldEffectGen.ts > codefixed at 19:22 1`] = `"// no-fixes"`;

exports[`missingStarInYieldEffectGen.ts > missingStarInYieldEffectGen.ts > codefixed at 20:8 1`] = `
"import * as Effect from "effect/Effect"

const noError = Effect.gen(function*(){
    yield* Effect.succeed(1)
})

// @ts-expect-error
const missingStarInYield = Effect.gen(function*(){
    yield Effect.succeed(1)
})

// @ts-expect-error
const missingStarInMultipleYield = Effect.gen(function*(){
    yield Effect.succeed(1)
    yield Effect.succeed(2)
})

const missingStarInInnerYield = Effect.gen(function*(){
    // @ts-expect-error
    yield* Effect.gen(function*(){
        yield* Effect.succeed(1)
    })
})

export function* effectInsideStandardGenerator(){
    yield Effect.never
    // ^- this is fine, not inside an effect gen
}

// @ts-expect-error
const effectFnUsage = Effect.fn(function*(){
    yield Effect.never
})

// @ts-expect-error
const tracedEffectFnUsage = Effect.fn("tracedEffectFnUsage")(function*(){
    yield Effect.never
})

// @ts-expect-error
const untracedEffectFnUsage = Effect.fnUntraced(function*(){
    yield Effect.never
})
"
`;

exports[`missingStarInYieldEffectGen.ts > missingStarInYieldEffectGen.ts > codefixed at 30:32 1`] = `"// no-fixes"`;

exports[`missingStarInYieldEffectGen.ts > missingStarInYieldEffectGen.ts > codefixed at 31:4 1`] = `
"import * as Effect from "effect/Effect"

const noError = Effect.gen(function*(){
    yield* Effect.succeed(1)
})

// @ts-expect-error
const missingStarInYield = Effect.gen(function*(){
    yield Effect.succeed(1)
})

// @ts-expect-error
const missingStarInMultipleYield = Effect.gen(function*(){
    yield Effect.succeed(1)
    yield Effect.succeed(2)
})

const missingStarInInnerYield = Effect.gen(function*(){
    // @ts-expect-error
    yield* Effect.gen(function*(){
        yield Effect.succeed(1)
    })
})

export function* effectInsideStandardGenerator(){
    yield Effect.never
    // ^- this is fine, not inside an effect gen
}

// @ts-expect-error
const effectFnUsage = Effect.fn(function*(){
    yield* Effect.never
})

// @ts-expect-error
const tracedEffectFnUsage = Effect.fn("tracedEffectFnUsage")(function*(){
    yield Effect.never
})

// @ts-expect-error
const untracedEffectFnUsage = Effect.fnUntraced(function*(){
    yield Effect.never
})
"
`;

exports[`missingStarInYieldEffectGen.ts > missingStarInYieldEffectGen.ts > codefixed at 35:61 1`] = `"// no-fixes"`;

exports[`missingStarInYieldEffectGen.ts > missingStarInYieldEffectGen.ts > codefixed at 36:4 1`] = `
"import * as Effect from "effect/Effect"

const noError = Effect.gen(function*(){
    yield* Effect.succeed(1)
})

// @ts-expect-error
const missingStarInYield = Effect.gen(function*(){
    yield Effect.succeed(1)
})

// @ts-expect-error
const missingStarInMultipleYield = Effect.gen(function*(){
    yield Effect.succeed(1)
    yield Effect.succeed(2)
})

const missingStarInInnerYield = Effect.gen(function*(){
    // @ts-expect-error
    yield* Effect.gen(function*(){
        yield Effect.succeed(1)
    })
})

export function* effectInsideStandardGenerator(){
    yield Effect.never
    // ^- this is fine, not inside an effect gen
}

// @ts-expect-error
const effectFnUsage = Effect.fn(function*(){
    yield Effect.never
})

// @ts-expect-error
const tracedEffectFnUsage = Effect.fn("tracedEffectFnUsage")(function*(){
    yield* Effect.never
})

// @ts-expect-error
const untracedEffectFnUsage = Effect.fnUntraced(function*(){
    yield Effect.never
})
"
`;

exports[`missingStarInYieldEffectGen.ts > missingStarInYieldEffectGen.ts > codefixed at 40:48 1`] = `"// no-fixes"`;

exports[`missingStarInYieldEffectGen.ts > missingStarInYieldEffectGen.ts > codefixed at 41:4 1`] = `
"import * as Effect from "effect/Effect"

const noError = Effect.gen(function*(){
    yield* Effect.succeed(1)
})

// @ts-expect-error
const missingStarInYield = Effect.gen(function*(){
    yield Effect.succeed(1)
})

// @ts-expect-error
const missingStarInMultipleYield = Effect.gen(function*(){
    yield Effect.succeed(1)
    yield Effect.succeed(2)
})

const missingStarInInnerYield = Effect.gen(function*(){
    // @ts-expect-error
    yield* Effect.gen(function*(){
        yield Effect.succeed(1)
    })
})

export function* effectInsideStandardGenerator(){
    yield Effect.never
    // ^- this is fine, not inside an effect gen
}

// @ts-expect-error
const effectFnUsage = Effect.fn(function*(){
    yield Effect.never
})

// @ts-expect-error
const tracedEffectFnUsage = Effect.fn("tracedEffectFnUsage")(function*(){
    yield Effect.never
})

// @ts-expect-error
const untracedEffectFnUsage = Effect.fnUntraced(function*(){
    yield* Effect.never
})
"
`;

exports[`missingStarInYieldEffectGen.ts > missingStarInYieldEffectGen.ts 1`] = `
"function
8:38 - 8:46 | Seems like you used yield instead of yield* inside this Effect.gen.

yield Effect.succeed(1)
9:4 - 9:27 | When yielding Effects inside Effect.gen, you should use yield* instead of yield.

function
13:46 - 13:54 | Seems like you used yield instead of yield* inside this Effect.gen.

yield Effect.succeed(1)
14:4 - 14:27 | When yielding Effects inside Effect.gen, you should use yield* instead of yield.

yield Effect.succeed(2)
15:4 - 15:27 | When yielding Effects inside Effect.gen, you should use yield* instead of yield.

function
20:22 - 20:30 | Seems like you used yield instead of yield* inside this Effect.gen.

yield Effect.succeed(1)
21:8 - 21:31 | When yielding Effects inside Effect.gen, you should use yield* instead of yield.

function
31:32 - 31:40 | Seems like you used yield instead of yield* inside this Effect.gen.

yield Effect.never
32:4 - 32:22 | When yielding Effects inside Effect.gen, you should use yield* instead of yield.

function
36:61 - 36:69 | Seems like you used yield instead of yield* inside this Effect.gen.

yield Effect.never
37:4 - 37:22 | When yielding Effects inside Effect.gen, you should use yield* instead of yield.

function
41:48 - 41:56 | Seems like you used yield instead of yield* inside this Effect.gen.

yield Effect.never
42:4 - 42:22 | When yielding Effects inside Effect.gen, you should use yield* instead of yield."
`;

exports[`unnecessaryEffectGen.ts > unnecessaryEffectGen.ts > codefixed at 11:36 1`] = `
"import * as Effect from "effect/Effect"

export const shouldNotRant = Effect.gen(function* () {
    yield* Effect.succeed(true)
    return yield* Effect.succeed(42)
})

export const shouldNotRaiseForNonEffect = Effect.gen(function* () {
    return 42
})

export const shouldRaiseForSingle = Effect.succeed(42)
"
`;

exports[`unnecessaryEffectGen.ts > unnecessaryEffectGen.ts 1`] = `
"Effect.gen(function* () {
    return yield* Effect.succeed(42)
})
12:36 - 14:2 | This Effect.gen is useless here because it only contains a single return statement."
`;
